--- a/public/src/footer.html
+++ b/public/src/footer.html
@@ -8,7 +8,7 @@
                 <img src="../../assets/logo.png" alt="G-Cycle">
                 <h1>G-Cycle</h1>
             </div>
-            <a href="https://www.google.com.br">
+            <a href="https://github.com/MathewsMatos/trabalho-final-web1">
                 <img class="githubimg" src="../../assets/githubimg.png" alt="Link para o projeto no Git">
             </a>
         </div>
